Fix footer visibility

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,9 +11,12 @@
   color-scheme: dark;
 }
 
-html,
-body {
+html {
   height: 100%;
+}
+
+body {
+  min-height: 100%;
 }
 
 body {
